# bazel_repro_shared_lib

./: BUILD.bazel  hello-world.cpp
base_shared/: BUILD.bazel  base_shared.cpp  base_shared.h
middle_shared/: BUILD.bazel  middle_shared.cpp  middle_shared.h
