load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "middle_shared",
    srcs = [
        "middle_shared.cpp",
    ],
    hdrs = ["middle_shared.h"],
    includes = ["."], # This helps dependent libraries find this library header(s).
    deps = ["//base_shared"],
    linkstatic = False,
)
